# pared

./: CHANGELOG.md  COPYRIGHT.md  Cargo.toml  README.md
src/: erased_arc.rs  erased_ptr.rs  lib.rs  prc.rs  sync.rs  vtable.rs
src/prc/: erased_rc.rs
src/sync/: erased_arc.rs
tests/: parc.rs  prc.rs
